# ServerDevice.FlexRay

./: CMakeLists.txt  README.md  mtestserver_device.h  mtestserver_device_flexray.cpp  test.cpp
src/: FlexRayChannel.cpp  FlexRayChannel.h  FlexRayConfig.cpp  FlexRayConfig.h  FlexRayDevice.cpp  FlexRayDevice.h  FlexRayTools.h
tests/: CMakeLists.txt  tests.cpp
tools/Common/: mtestserver_common.h
tools/Common/win32/: MTestServer.Common.lib
tools/Common/win64/: MTestServer.Common.lib
tools/bytedecoder/: Frame.h  Signal.h  byte_decoder.h
tools/bytedecoder/win32/: bytedecoder.lib
tools/bytedecoder/win64/: bytedecoder.lib
tools/flexraywrapper/: flexraywrapper.h
tools/flexraywrapper/win32/: flexraywrapper.lib
tools/serverlogger/: logger.h  server_logger.h
tools/serverlogger/win32/: serverlogger.lib
tools/serverlogger/win64/: serverlogger.lib
tools/varmanager/: varmanager.h  vartype.h
tools/varmanager/win32/: varmanager.lib
tools/varmanager/win64/: varmanager.lib
tools/watchdog/: mtestserver_watchdog.h  mtestserver_watchdog.hpp
tools/watchdog/win32/: MTestServer.Watchdog.lib
tools/watchdog/win64/: MTestServer.Watchdog.lib
